feat: post pages and cards

--- a/src/posts/whos-that-pokemon/index.mdx
+++ b/src/posts/whos-that-pokemon/index.mdx
@@ -1,9 +1,7 @@
 ---
 title: Who's That Pokemon
 date: 2020-05-14
-live: true
-featured: true
-url: 'https://pokemon.dylansheffer.app'
+image: './whos-that-pokemon.png'
 ---
 
 [View raw (TEST.md)](https://raw.github.com/adamschwartz/github-markdown-kitchen-sink/master/README.md)
