--- a/src/projects/basil-ipsum/index.mdx
+++ b/src/projects/basil-ipsum/index.mdx
@@ -1,12 +1,13 @@
 ---
 title: Basil Ipsum
-date: 2020-05-14
+date: 2020-05-15
 live: false
 featured: false
 url: ''
 tags:
   - AWS
   - Javascript
+image: './basil.jpg'
 ---
 
 # Basil Ipsum Heading
