--- a/src/projects/portfolio/index.mdx
+++ b/src/projects/portfolio/index.mdx
@@ -5,6 +5,7 @@ live: false
 featured: false
 url: ''
 tags: ['Gatsby', 'React', 'Javascript', 'Figma']
+image: './rough-site-mockup.png'
 ---
 
 # Portfolio Heading
@@ -12,3 +13,11 @@ tags: ['Gatsby', 'React', 'Javascript', 'Figma']
 ## Portfolio Sub-heading
 
 Portfolio content
+
+Mauris commodo diam eu arcu interdum eleifend. Aliquam in elit lacus. Pellentesque vestibulum venenatis neque sit amet imperdiet. Etiam sem libero, ornare ac tristique eu, pellentesque ut nisl. Nulla ut malesuada tortor. Ut placerat fermentum diam sed egestas. Donec ullamcorper ligula sollicitudin blandit convallis. Phasellus sodales diam et urna euismod porta. Vestibulum lectus neque, aliquet ac purus sit amet, vestibulum ullamcorper lectus. Aliquam venenatis nibh vel magna gravida, eu mollis lectus sollicitudin. Suspendisse quis neque vitae orci iaculis sagittis. Morbi fringilla justo quis turpis dapibus, nec tempor nulla euismod.
+
+Mauris commodo diam eu arcu interdum eleifend. Aliquam in elit lacus. Pellentesque vestibulum venenatis neque sit amet imperdiet. Etiam sem libero, ornare ac tristique eu, pellentesque ut nisl. Nulla ut malesuada tortor. Ut placerat fermentum diam sed egestas. Donec ullamcorper ligula sollicitudin blandit convallis. Phasellus sodales diam et urna euismod porta. Vestibulum lectus neque, aliquet ac purus sit amet, vestibulum ullamcorper lectus. Aliquam venenatis nibh vel magna gravida, eu mollis lectus sollicitudin. Suspendisse quis neque vitae orci iaculis sagittis. Morbi fringilla justo quis turpis dapibus, nec tempor nulla euismod.
+
+Mauris commodo diam eu arcu interdum eleifend. Aliquam in elit lacus. Pellentesque vestibulum venenatis neque sit amet imperdiet. Etiam sem libero, ornare ac tristique eu, pellentesque ut nisl. Nulla ut malesuada tortor. Ut placerat fermentum diam sed egestas. Donec ullamcorper ligula sollicitudin blandit convallis. Phasellus sodales diam et urna euismod porta. Vestibulum lectus neque, aliquet ac purus sit amet, vestibulum ullamcorper lectus. Aliquam venenatis nibh vel magna gravida, eu mollis lectus sollicitudin. Suspendisse quis neque vitae orci iaculis sagittis. Morbi fringilla justo quis turpis dapibus, nec tempor nulla euismod.
+
+Mauris commodo diam eu arcu interdum eleifend. Aliquam in elit lacus. Pellentesque vestibulum venenatis neque sit amet imperdiet. Etiam sem libero, ornare ac tristique eu, pellentesque ut nisl. Nulla ut malesuada tortor. Ut placerat fermentum diam sed egestas. Donec ullamcorper ligula sollicitudin blandit convallis. Phasellus sodales diam et urna euismod porta. Vestibulum lectus neque, aliquet ac purus sit amet, vestibulum ullamcorper lectus. Aliquam venenatis nibh vel magna gravida, eu mollis lectus sollicitudin. Suspendisse quis neque vitae orci iaculis sagittis. Morbi fringilla justo quis turpis dapibus, nec tempor nulla euismod.
