--- a/src/projects/whos-that-pokemon/index.mdx
+++ b/src/projects/whos-that-pokemon/index.mdx
@@ -5,6 +5,7 @@ live: true
 featured: true
 url: 'https://pokemon.dylansheffer.app'
 tags: ['React', 'AWS']
+image: './whos-that-pokemon.png'
 ---
 
 # Who's That Pokemon Heading
