feat: post pages

--- a/src/posts/whos-that-pokemon/index.mdx
+++ b/src/posts/whos-that-pokemon/index.mdx
@@ -2,6 +2,10 @@
 title: Who's That Pokemon
 date: 2020-05-14
 image: './whos-that-pokemon.png'
+tags:
+  - tag 1
+  - tag 2
+  - tag 3
 ---
 
 [View raw (TEST.md)](https://raw.github.com/adamschwartz/github-markdown-kitchen-sink/master/README.md)
