feat: initial scaffolding for real pages

--- a/src/posts/uses/index.mdx
+++ b/src/posts/uses/index.mdx
@@ -1,19 +1,20 @@
 ---
-title: Basil Ipsum
+title: Uses
 date: 2020-05-14
 live: false
 featured: false
 url: ''
-image: './basil.jpg'
+image: './uses.jpg'
 ---
 
-# Basil Ipsum Heading
+## What is a `/uses` page?
 
-## Basil Ipsum Sub-heading
+Pellentesque in tempus eros. Fusce ut consectetur tortor, eu hendrerit nibh. Duis dignissim eget odio vel fermentum. Aenean a nibh accumsan, lobortis odio ac, tincidunt arcu. Nullam eget blandit justo. Proin est nulla, bibendum quis odio condimentum, condimentum malesuada sem. Nam ut mattis tellus. In feugiat aliquet posuere. Etiam tempus nec massa sit amet elementum. Morbi consectetur laoreet velit, ac commodo enim dignissim a. Aenean viverra tincidunt odio, nec maximus felis maximus eget. Ut et pretium neque, ut bibendum massa. Quisque accumsan lacus eget venenatis blandit. In et placerat dolor. Aliquam iaculis metus in ultrices faucibus.
 
-Basil Ipsum content
+## What I Use
 
-```javascript
-const foo = 💩;
-console.log(`This is a test${foo}`);
-```
+### Hardware
+
+### Software
+
+### Beverages
