--- a/src/projects/dylansheffer.com/index.mdx
+++ b/src/projects/dylansheffer.com/index.mdx
@@ -1,23 +1,26 @@
 ---
-title: Portfolio
-date: 2020-05-14
-live: false
-featured: false
-url: ''
+title: DylanSheffer.com
+date: 2020-05-29
+live: true
+url: 'https://www.dylansheffer.com'
 tags: ['Gatsby', 'React', 'Javascript', 'Figma']
 image: './rough-site-mockup.png'
 ---
 
-# Portfolio Heading
+## Background
 
-## Portfolio Sub-heading
+Vivamus convallis quam id tempus elementum. Ut quis sollicitudin velit. Nam scelerisque mauris augue, eu varius nulla auctor sit amet. Duis id congue ante. Nam finibus facilisis magna, eu consequat lorem tincidunt nec. Quisque blandit lacinia turpis, vitae pharetra metus porttitor eget. In sit amet mi a eros molestie congue. Etiam ex risus, semper vel nunc vitae, mattis malesuada felis.
 
-Portfolio content
+## The Stack
 
-Mauris commodo diam eu arcu interdum eleifend. Aliquam in elit lacus. Pellentesque vestibulum venenatis neque sit amet imperdiet. Etiam sem libero, ornare ac tristique eu, pellentesque ut nisl. Nulla ut malesuada tortor. Ut placerat fermentum diam sed egestas. Donec ullamcorper ligula sollicitudin blandit convallis. Phasellus sodales diam et urna euismod porta. Vestibulum lectus neque, aliquet ac purus sit amet, vestibulum ullamcorper lectus. Aliquam venenatis nibh vel magna gravida, eu mollis lectus sollicitudin. Suspendisse quis neque vitae orci iaculis sagittis. Morbi fringilla justo quis turpis dapibus, nec tempor nulla euismod.
+- Proin egestas ipsum mattis eros porttitor,
+- vel suscipit mauris ornare.
+- Nam vestibulum turpis sit amet pharetra consequat.
 
-Mauris commodo diam eu arcu interdum eleifend. Aliquam in elit lacus. Pellentesque vestibulum venenatis neque sit amet imperdiet. Etiam sem libero, ornare ac tristique eu, pellentesque ut nisl. Nulla ut malesuada tortor. Ut placerat fermentum diam sed egestas. Donec ullamcorper ligula sollicitudin blandit convallis. Phasellus sodales diam et urna euismod porta. Vestibulum lectus neque, aliquet ac purus sit amet, vestibulum ullamcorper lectus. Aliquam venenatis nibh vel magna gravida, eu mollis lectus sollicitudin. Suspendisse quis neque vitae orci iaculis sagittis. Morbi fringilla justo quis turpis dapibus, nec tempor nulla euismod.
+## My Process
 
-Mauris commodo diam eu arcu interdum eleifend. Aliquam in elit lacus. Pellentesque vestibulum venenatis neque sit amet imperdiet. Etiam sem libero, ornare ac tristique eu, pellentesque ut nisl. Nulla ut malesuada tortor. Ut placerat fermentum diam sed egestas. Donec ullamcorper ligula sollicitudin blandit convallis. Phasellus sodales diam et urna euismod porta. Vestibulum lectus neque, aliquet ac purus sit amet, vestibulum ullamcorper lectus. Aliquam venenatis nibh vel magna gravida, eu mollis lectus sollicitudin. Suspendisse quis neque vitae orci iaculis sagittis. Morbi fringilla justo quis turpis dapibus, nec tempor nulla euismod.
+Sed bibendum nibh non augue molestie aliquet. Donec vel elementum velit. Nunc interdum mauris nisl, ac dapibus nibh consectetur a. Etiam vitae justo neque. Pellentesque et tristique metus. Vestibulum vitae feugiat neque, quis mattis orci. Nunc tincidunt accumsan convallis. Nunc rhoncus feugiat libero, eu volutpat dolor ultrices id. Etiam sagittis accumsan accumsan. Aliquam erat volutpat. Sed a ligula lectus. Proin quis augue nisl. Pellentesque tincidunt cursus justo, ac varius felis accumsan ac. Sed vitae purus et sem porta vehicula.
 
-Mauris commodo diam eu arcu interdum eleifend. Aliquam in elit lacus. Pellentesque vestibulum venenatis neque sit amet imperdiet. Etiam sem libero, ornare ac tristique eu, pellentesque ut nisl. Nulla ut malesuada tortor. Ut placerat fermentum diam sed egestas. Donec ullamcorper ligula sollicitudin blandit convallis. Phasellus sodales diam et urna euismod porta. Vestibulum lectus neque, aliquet ac purus sit amet, vestibulum ullamcorper lectus. Aliquam venenatis nibh vel magna gravida, eu mollis lectus sollicitudin. Suspendisse quis neque vitae orci iaculis sagittis. Morbi fringilla justo quis turpis dapibus, nec tempor nulla euismod.
+## Final Thoughts
+
+Pellentesque in tempus eros. Fusce ut consectetur tortor, eu hendrerit nibh. Duis dignissim eget odio vel fermentum. Aenean a nibh accumsan, lobortis odio ac, tincidunt arcu. Nullam eget blandit justo. Proin est nulla, bibendum quis odio condimentum, condimentum malesuada sem. Nam ut mattis tellus. In feugiat aliquet posuere. Etiam tempus nec massa sit amet elementum. Morbi consectetur laoreet velit, ac commodo enim dignissim a. Aenean viverra tincidunt odio, nec maximus felis maximus eget. Ut et pretium neque, ut bibendum massa. Quisque accumsan lacus eget venenatis blandit. In et placerat dolor. Aliquam iaculis metus in ultrices faucibus.
