fix: add shoutouts to dylansheffer post

--- a/src/projects/dylansheffer.com/index.mdx
+++ b/src/projects/dylansheffer.com/index.mdx
@@ -25,7 +25,7 @@ The site is hosted on [Netlify](https://www.netlify.com/) and uses their conveni
 
 ## My Process
 
-The process for creating my ideal business/portfolio website is a combination of thinking about what my needs are for the site, deciding on a general aesthetic, and scavenging though tons of other people’s portfolio sites for inspiration. (Shout outs to TODO ADD PEOPLE)
+The process for creating my ideal business/portfolio website is a combination of thinking about what my needs are for the site, deciding on a general aesthetic, and scavenging though tons of other people’s portfolio sites for inspiration. (Shout outs to [Wes Bos](https://wesbos.com/), [Sara Soueidan](https://www.sarasoueidan.com/), [Kevin Griffin](https://consultwithgriff.com/), and [Byurhan Beyzat](https://www.byurhanbeyzat.com/))
 
 Once I had my list of features, inspirations, hopes, dreams, and desired <Aesthetic>aesthetic</Aesthetic>, I hopped into [Figma](https://www.figma.com/) and started the tried and true `"draw rectangles until you like the layout"` method. Then, I created components that fit within those rectangles, and eventually I ended up with a mock-up that starts to resemble a website!
 
