fix: adjust dylansheffer sign off

--- a/src/projects/dylansheffer.com/index.mdx
+++ b/src/projects/dylansheffer.com/index.mdx
@@ -41,4 +41,4 @@ Now that I had a design that I felt good about, it was time to finally commit it
 
 I really enjoyed building this website. Gatsby makes it so easy to build modern websites that are both performant and accessible. The backend (or lack there of) would be concerning for client work because most people don’t want to write straight up markdown. However, it works out perfectly for me because I _am_ down with the markdown <span aria-hidden>🗿</span> and I want to have more control over my content.
 
-I hope you all enjoy your time here and are happy and healthy 🙂
+I hope you all enjoy your time here and are happy and healthy. Thank you for reading 🌹
