fix: remove aside

--- a/src/projects/dylansheffer.com/index.mdx
+++ b/src/projects/dylansheffer.com/index.mdx
@@ -19,7 +19,7 @@ My styling is written with [styled-components](https://styled-components.com/). 
 
 However, my favorite feature of styled-components is the [`as`](https://styled-components.com/docs/api#as-polymorphic-prop) prop. The `as` prop lets you use the styles of one element (let's say a button) and apply it directly to another element (a link). This allows you to easily use semantic markup (necessary for both accessibility and SEO), while keeping the visual presentation you desire. A+, 💯, well done!
 
-The content of my posts are written in [MDX](https://mdxjs.com/). MDX is regular-ole markdown with the ability to add in JSX components. I decided to go with this approach because I pretty much write everything using markdown and I thought that it would be convenient to be able to embed React components into my posts easily. I do have some concerns about backwards compatibility for my posts in the future, but I anticipate that the components I choose to embed (video players mostly) will be easily convertible into what ever futuristic format I'll use down the road.
+The content of my posts are written in [MDX](https://mdxjs.com/). MDX is regular-ole markdown with the ability to add in JSX components. I decided to go with this approach because I pretty much write everything using markdown and I thought that it would be convenient to be able to embed React components into my posts easily. I do have some concerns about backwards compatibility for my posts in the future, but I anticipate that the components I choose to embed will be easily convertible into what ever futuristic format I'll use down the road.
 
 The site is hosted on [Netlify](https://www.netlify.com/) and uses their convenient forms service for handling my contact form. Netlify has really figured out how to make deploying websites easy. I just had to connect Netlify to my GitHub repo and BOOM! it's online and it has automatic CI/CD 🤯! I was also able to preserve the old version of my website at my domain, while automatically deploying the new version to a separate domain while it was under development.
 
