fix: replace apple logo with emoji

--- a/src/posts/uses/index.mdx
+++ b/src/posts/uses/index.mdx
@@ -15,7 +15,7 @@ A `/uses` page is a trend started by [Wes Bos](https://wesbos.com/uses) where on
 
 ### Software
 
-- OS: MacOS 
+- OS: MacOS 🍎
 - Text Editor: [Visual Studio Code](https://code.visualstudio.com/)
   - Theme: [Monokai Pro 😍](https://monokai.pro/)
   - [Extensions/Configuration](https://gist.github.com/dylansheffer/d66d00cdee9bcf6de140a5134b18b3b4)
