feat: link animations

--- a/src/posts/uses/index.mdx
+++ b/src/posts/uses/index.mdx
@@ -27,7 +27,7 @@ A `/uses` page is a trend started by [Wes Bos](https://wesbos.com/uses) where on
 - [Dotfiles](https://github.com/dylansheffer/dotfiles)
 - Design: [Figma](http://figma.com/)
 - Note Taking: [Bear](https://bear.app/) for taking notes in markdown + a great looking interface + ability to add drawings + cloud syncing 👌
-- Music: Spotify (specifically my cloud rap playlist called [`Trash`](https://open.spotify.com/playlist/1RJpwd0zCqB912MZeI6MPg?si=H2NJmqw8SYCFhBVwqxjFHw))
+- Music: Spotify (specifically my cloud rap playlist called [Trash](https://open.spotify.com/playlist/1RJpwd0zCqB912MZeI6MPg?si=H2NJmqw8SYCFhBVwqxjFHw))
 
 ### Hardware
 
