feat: add highlight color (shout outs to @andrew-boyd)

--- a/src/posts/uses/index.mdx
+++ b/src/posts/uses/index.mdx
@@ -11,7 +11,7 @@ image: './uses.jpg'
 
 ## What is a `/uses` page?
 
-A `/uses` page is a trend started by [Wes Bos](https://wesbos.com/uses) where one lists the hardware and software they use to make them a great developer! Wes has also created a page called [uses.tech](uses.tech) as a directory for everyone else's `/uses` pages.
+A `/uses` page is a trend started by [Wes Bos](https://wesbos.com/uses) where one lists the hardware and software they use to make them a great developer! Wes has also created a page called [uses.tech](https://uses.tech) as a directory for everyone else's `/uses` pages.
 
 ## What I Use
 
