fix: higher resolution post images

--- a/src/projects/dylansheffer.com/index.mdx
+++ b/src/projects/dylansheffer.com/index.mdx
@@ -4,7 +4,7 @@ date: 2020-05-29
 live: true
 url: 'https://www.dylansheffer.com'
 tags: ['Gatsby', 'Netlify', 'styled-components']
-image: './hero.jpg'
+image: './dylansheffer.png'
 ---
 
 import { Aesthetic } from '../../components/Aesthetic.js';
