--- a/src/projects/whos-that-pokemon/index.mdx
+++ b/src/projects/whos-that-pokemon/index.mdx
@@ -5,7 +5,7 @@ live: true
 featured: true
 url: 'https://pokemon.dylansheffer.app'
 tags: ['React', 'Docker', 'GraphQL', 'PostgreSQL']
-image: './whos-that-pokemon.jpg'
+image: './whos-that-pokemon.png'
 ---
 
 import { EditOnGitHub } from '../../components/EditOnGitHub.js';
