--- a/src/projects/everyday-a11y-presentation/index.mdx
+++ b/src/projects/everyday-a11y-presentation/index.mdx
@@ -4,7 +4,7 @@ date: 2020-04-01
 live: true
 url: 'https://everyday-accessibility-presentation.netlify.app/'
 tags: ['Talk', 'Reveal.js', 'Javascript']
-image: './hero.jpg'
+image: './hrdevfest2018.png'
 ---
 
 import { YouTubeEmbed } from '../../components/YouTubeEmbed.js';
