--- a/src/projects/everyday-a11y-presentation/index.mdx
+++ b/src/projects/everyday-a11y-presentation/index.mdx
@@ -3,7 +3,7 @@ title: Everyday A11y Presentation
 date: 2020-04-01
 live: true
 url: 'https://everyday-accessibility-presentation.netlify.app/'
-tags: ['Talk', 'Reveal.js', 'JavaScript']
+tags: ['Talk', 'Accessibility', 'Reveal.js', 'JavaScript']
 image: './hrdevfest2018.png'
 ---
 
