feat: add more meaningful alt text for post hero images

--- a/src/posts/uses/index.mdx
+++ b/src/posts/uses/index.mdx
@@ -6,7 +6,9 @@ featured: false
 url: ''
 tags:
   - Misc
-image: './uses.jpg'
+image:
+  src: './uses.jpg'
+  alt: "Dylan's Dog sitting on his lap at his desk"
 ---
 
 ## What is a `/uses` page?
