--- a/src/projects/dylansheffer.com/index.mdx
+++ b/src/projects/dylansheffer.com/index.mdx
@@ -4,7 +4,9 @@ date: 2020-05-29
 live: true
 url: 'https://www.dylansheffer.com'
 tags: ['Gatsby', 'Netlify', 'styled-components']
-image: './dylansheffer.png'
+image:
+  src: './dylansheffer.png'
+  alt: 'screenshot of dylansheffer.com'
 ---
 
 import { Aesthetic } from '../../components/Aesthetic.js';
