--- a/src/projects/everyday-a11y-presentation/index.mdx
+++ b/src/projects/everyday-a11y-presentation/index.mdx
@@ -4,7 +4,9 @@ date: 2020-04-01
 live: true
 url: 'https://everyday-accessibility-presentation.netlify.app/'
 tags: ['Talk', 'Accessibility', 'Reveal.js', 'JavaScript']
-image: './hrdevfest2018.png'
+image:
+  src: './hrdevfest2018.png'
+  alt: 'Dylan presenting at HR Dev Fest 2018'
 ---
 
 import { YouTubeEmbed } from '../../components/YouTubeEmbed.js';
