--- a/src/projects/whos-that-pokemon/index.mdx
+++ b/src/projects/whos-that-pokemon/index.mdx
@@ -5,7 +5,9 @@ live: true
 featured: true
 url: 'https://pokemon.dylansheffer.app'
 tags: ['React', 'Docker', 'GraphQL', 'PostgreSQL']
-image: './whos-that-pokemon.png'
+image:
+  src: './whos-that-pokemon.png'
+  alt: "screenshot of the Who's That Pokemon?!? app"
 ---
 
 import { EditOnGitHub } from '../../components/EditOnGitHub.js';
