fix: improve alt-text ux

--- a/src/posts/uses/index.mdx
+++ b/src/posts/uses/index.mdx
@@ -8,7 +8,7 @@ tags:
   - Misc
 image:
   src: './uses.jpg'
-  alt: "Dylan's Dog sitting on his lap at his desk"
+  alt: "Dylan's Dog sitting on his lap at his desk."
 ---
 
 ## What is a `/uses` page?
