--- a/src/projects/dylansheffer.com/index.mdx
+++ b/src/projects/dylansheffer.com/index.mdx
@@ -6,7 +6,7 @@ url: 'https://www.dylansheffer.com'
 tags: ['Gatsby', 'Netlify', 'styled-components']
 image:
   src: './dylansheffer.png'
-  alt: 'screenshot of dylansheffer.com'
+  alt: 'screenshot of dylansheffer.com.'
 ---
 
 import { Aesthetic } from '../../components/Aesthetic.js';
