--- a/src/projects/everyday-a11y-presentation/index.mdx
+++ b/src/projects/everyday-a11y-presentation/index.mdx
@@ -6,7 +6,7 @@ url: 'https://everyday-accessibility-presentation.netlify.app/'
 tags: ['Talk', 'Accessibility', 'Reveal.js', 'JavaScript']
 image:
   src: './hrdevfest2018.png'
-  alt: 'Dylan presenting at HR Dev Fest 2018'
+  alt: 'Dylan presenting at HR Dev Fest 2018.'
 ---
 
 import { YouTubeEmbed } from '../../components/YouTubeEmbed.js';
