--- a/src/projects/whos-that-pokemon/index.mdx
+++ b/src/projects/whos-that-pokemon/index.mdx
@@ -7,7 +7,7 @@ url: 'https://pokemon.dylansheffer.app'
 tags: ['React', 'Docker', 'GraphQL', 'PostgreSQL']
 image:
   src: './whos-that-pokemon.png'
-  alt: "screenshot of the Who's That Pokemon?!? app"
+  alt: "screenshot of the Who's That Pokemon?!? app."
 ---
 
 import { EditOnGitHub } from '../../components/EditOnGitHub.js';
