refactor: change hire-me page to contact

--- a/src/projects/everyday-a11y-presentation/index.mdx
+++ b/src/projects/everyday-a11y-presentation/index.mdx
@@ -13,7 +13,7 @@ import { YouTubeEmbed } from '../../components/YouTubeEmbed.js';
 
 My talk Everyday A11y (formerly known as "Accessibility isn't Inaccessible") is an intro into what accessibility is (and isn't), how people with disabilities use assistive technology, and how the code we write is interpreted by assistive tech. I have given this talk at many meet-ups, for companies, and at [beCamp 2018](https://2018.be.camp/) and [HR DevFest 2018](https://hrdevfest.org/speakers/).
 
-If you're interested in having me present this talk at your organization or conference, [please reach out](/hire-me) 🌹
+If you're interested in having me present this talk at your organization or conference, [please reach out](/contact) 🌹
 
 ## Accessibility Isn't Inaccessible (Old) - HR DevFest 2018
 
