fix: remove live link to whos-that-pokemon

--- a/src/projects/whos-that-pokemon/index.mdx
+++ b/src/projects/whos-that-pokemon/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: Who's That Pokemon?!?
 date: 2020-05-14
-live: true
+live: false
 featured: true
-url: 'https://pokemon.dylansheffer.app'
+url: ''
 tags: ['React', 'Docker', 'GraphQL', 'PostgreSQL']
 image:
   src: './whos-that-pokemon.png'
